Do not declare global variable in header file.

* src/options.h (_scute_opt_t): New typedef.
(_scute_opt): Declare as extern and move definition to ...
* src/readconf.c (_scute_opt): here.
--

This fixes build with gcc-10, which has -fno-common enabled by
default.

GnuPG-bug-id: 5360
Signed-off-by: Damien Goutte-Gattat <dgouttegattat@incenp.org>